// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#DataGrid should render DefaultDateCellRenderer 1`] = `
<div
  className="theme-td-grid td-grid"
>
  <AgGridReact
    columnDefs={Array []}
    frameworkComponents={
      Object {
        "cellRenderer": [Function],
        "headerGrid": [Function],
        "pinHeaderRenderer": [Function],
      }
    }
    headerHeight={69}
    navigateToNextCell={[Function]}
    onCellFocused={[Function]}
    onGridReady={[Function]}
    onViewportChanged={[Function]}
    onVirtualColumnsChanged={[Function]}
    rowData={Array []}
    rowHeight={39}
    rowSelection="single"
    suppressDragLeaveHidesColumns={true}
    tabToNextCell={[Function]}
  />
</div>
`;

exports[`#DataGrid should render DefaultDateCellRenderer with columnsDefs and rowData 1`] = `
<div
  className="theme-td-grid td-grid"
>
  <AgGridReact
    columnDefs={
      Array [
        Object {
          "field": "index.index",
          "headerComponent": "pinHeaderRenderer",
          "lockPosition": true,
          "pinned": "left",
          "valueGetter": [Function],
          "width": 100,
        },
        Object {
          "@talend-quality@": Object {
            "-1": 62,
            "0": 0,
            "1": 38,
          },
          "avro": Object {
            "@talend-quality@": Object {
              "-1": 62,
              "0": 0,
              "1": 38,
            },
            "doc": "Nom de la gare",
            "name": "field0",
            "type": Object {
              "dqType": "FR Commune",
              "dqTypeKey": "FR_COMMUNE",
              "type": "string",
            },
          },
          "cellRenderer": "cellRenderer",
          "field": "sample.field0",
          "headerComponent": "headerGrid",
          "headerName": "Nom de la gare",
          "lockPinned": true,
          "type": "FR Commune",
          "valueGetter": [Function],
        },
        Object {
          "@talend-quality@": Object {
            "-1": 0,
            "0": 0,
            "1": 100,
          },
          "avro": Object {
            "@talend-quality@": Object {
              "-1": 0,
              "0": 0,
              "1": 100,
            },
            "doc": "Code UIC",
            "name": "field1",
            "type": Object {
              "dqType": "",
              "dqTypeKey": "",
              "type": "int",
            },
          },
          "cellRenderer": "cellRenderer",
          "field": "sample.field1",
          "headerComponent": "headerGrid",
          "headerName": "Code UIC",
          "lockPinned": true,
          "type": "int",
          "valueGetter": [Function],
        },
      ]
    }
    frameworkComponents={
      Object {
        "cellRenderer": [Function],
        "headerGrid": [Function],
        "pinHeaderRenderer": [Function],
      }
    }
    headerHeight={69}
    navigateToNextCell={[Function]}
    onCellFocused={[Function]}
    onGridReady={[Function]}
    onViewportChanged={[Function]}
    onVirtualColumnsChanged={[Function]}
    rowData={
      Array [
        Object {
          "index.index": 0,
          "sample.field0": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "Aéroport Charles de Gaulle 2 TGV",
          },
          "sample.field1": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "271494",
          },
          "sample.field2": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "95716",
          },
          "sample.field3": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "",
          },
          "sample.field4": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "10748798",
          },
          "sample.field5": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": -1,
            "value": "33929307",
          },
          "sample.field6": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "10920487",
          },
          "sample.field7": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "11030795",
          },
          "sample.field8": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 0,
            "value": "10771660",
          },
          "sample.field9": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "10880464",
          },
        },
        Object {
          "index.index": 1,
          "sample.field0": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "Aguilcourt-Variscourt",
          },
          "sample.field1": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 0,
            "value": "171702",
          },
          "sample.field2": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "2190",
          },
          "sample.field3": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": -1,
            "value": "c",
          },
          "sample.field4": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "9560",
          },
          "sample.field5": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 0,
            "value": "",
          },
          "sample.field6": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "9812",
          },
          "sample.field7": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 0,
            "value": "",
          },
          "sample.field8": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": 1,
            "value": "8919",
          },
          "sample.field9": Object {
            "avro": Object {},
            "comments": Array [],
            "quality": -1,
            "value": "",
          },
        },
      ]
    }
    rowHeight={39}
    rowSelection="single"
    suppressDragLeaveHidesColumns={true}
    tabToNextCell={[Function]}
  />
</div>
`;

exports[`#injectedCellRenderer should injected the cell renderer 1`] = `
<Component
  avroRenderer={Object {}}
  getComponent={[Function]}
  id="injectedComponent"
/>
`;

exports[`#injectedCellRenderer should injected the default cell renderer 1`] = `
<DefaultCellRenderer
  avroRenderer={Object {}}
  getComponent={null}
  id="injectedComponent"
/>
`;

exports[`#injectedHeaderRenderer should injected the default header renderer 1`] = `
<DefaultHeaderRenderer
  id="injectedComponent"
  onFocusedColumn={[Function]}
/>
`;

exports[`#injectedHeaderRenderer should injected the header renderer 1`] = `
<Component
  id="injectedComponent"
  onFocusedColumn={[Function]}
/>
`;
